[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/VictoryScreen.gd" type="Script" id=1]
[ext_resource path="res://UI/Assets/Fonts/KdamThmor_10.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/PowerUpSlots.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.105882, 0.211765, 0.101961, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 0, 1 )

[node name="VictoryScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 320, 180 )
color = Color( 0, 0, 0, 0.705882 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 160
custom_constants/margin_top = 80
custom_constants/margin_left = 160
custom_constants/margin_bottom = 80

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_left = 160.0
margin_top = 80.0
margin_right = 480.0
margin_bottom = 280.0
color = Color( 0.623529, 0.623529, 0.623529, 1 )

[node name="V" type="VBoxContainer" parent="MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15

[node name="Control" type="Control" parent="MarginContainer/ColorRect/V"]
margin_right = 320.0

[node name="Title" type="Label" parent="MarginContainer/ColorRect/V"]
margin_top = 15.0
margin_right = 320.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "Victory!"
align = 1
valign = 1

[node name="Score" type="Label" parent="MarginContainer/ColorRect/V"]
margin_top = 46.0
margin_right = 320.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 2 )
text = "Score: 99"
align = 1

[node name="PowerUps" type="HBoxContainer" parent="MarginContainer/ColorRect/V"]
margin_top = 77.0
margin_right = 320.0
margin_bottom = 113.0
script = ExtResource( 3 )

[node name="Slot1" type="Panel" parent="MarginContainer/ColorRect/V/PowerUps"]
margin_left = 34.0
margin_right = 70.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
mouse_filter = 1
size_flags_horizontal = 6
custom_styles/panel = SubResource( 1 )

[node name="Button" type="TextureButton" parent="MarginContainer/ColorRect/V/PowerUps/Slot1"]
margin_right = 36.0
margin_bottom = 36.0
expand = true
stretch_mode = 3

[node name="Slot2" type="Panel" parent="MarginContainer/ColorRect/V/PowerUps"]
margin_left = 142.0
margin_right = 178.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
mouse_filter = 1
size_flags_horizontal = 6
custom_styles/panel = SubResource( 1 )

[node name="Button" type="TextureButton" parent="MarginContainer/ColorRect/V/PowerUps/Slot2"]
margin_right = 36.0
margin_bottom = 36.0
expand = true
stretch_mode = 3

[node name="Slot3" type="Panel" parent="MarginContainer/ColorRect/V/PowerUps"]
margin_left = 250.0
margin_right = 286.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
mouse_filter = 1
size_flags_horizontal = 6
custom_styles/panel = SubResource( 1 )

[node name="Button" type="TextureButton" parent="MarginContainer/ColorRect/V/PowerUps/Slot3"]
margin_right = 36.0
margin_bottom = 36.0
expand = true
stretch_mode = 3

[node name="RestartButton" type="Button" parent="MarginContainer/ColorRect/V"]
margin_left = 133.0
margin_top = 128.0
margin_right = 186.0
margin_bottom = 150.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 2 )
text = "Continue"

[node name="BackButton" type="Button" parent="MarginContainer/ColorRect/V"]
margin_left = 143.0
margin_top = 165.0
margin_right = 177.0
margin_bottom = 187.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="Control2" type="Control" parent="MarginContainer/ColorRect/V"]
margin_top = 202.0
margin_right = 320.0
margin_bottom = 202.0

[connection signal="pressed" from="MarginContainer/ColorRect/V/PowerUps/Slot1/Button" to="MarginContainer/ColorRect/V/PowerUps" method="_on_Slot1_Button_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/V/PowerUps/Slot2/Button" to="MarginContainer/ColorRect/V/PowerUps" method="_on_slot2_Button_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/V/PowerUps/Slot3/Button" to="MarginContainer/ColorRect/V/PowerUps" method="_on_slot3_Button_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/V/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/V/BackButton" to="." method="_on_BackButton_pressed"]
